# blu

./: .gitignore  AGENTS.md  ANALYSIS-alpha-readiness.md  ASYNC_BACKEND_SPEC.md  BLU_SERVE_DESIGN.md  CHANGELOG.md  Cargo.toml  ENVELOPE_ENCRYPTION_DESIGN.md  LICENSE-APACHE  LICENSE-ISC  LICENSE-MIT  MULTI-BACKEND-SPEC.md  MULTI-BACKEND.md  PLAN-PARALLEL-IO.md  PLAN-PQ-INTEGRATION.md  PLAN-PQ.md  PLAN-blu-serve.md  PLAN-cold-storage-cleanup.md  PLAN-defrag-scrub.md  PLAN-dogfood-closeout.md  PLAN-dogfood-readiness.md  PLAN-glacier-cold-storage.md  PLAN-index-push-consistency.md  PLAN-serve-hardening.md  PLAN-serve-stage-6-segmented-aead.md  PLAN-serve-stage-6e-writer-reader.md  PLAN-serve-write-path.md  PLAN-v0.5.md  PLAN.md  PQ-IDENTITY-DESIGN.md  PRIOS.md  PULSE.md  README.md  REMOVE-BLACKBOX-PLAN.md  REMOVE-BLACKBOX-REVIEW.md  REMOVE-BLACKBOX.md  REMOVE-VAULT-LOCAL-IDENTITY.md  STAGE2.md  TODO.md  backlog.md  (+2 more)
.githooks/: pre-push
.github/workflows/: ci.yml
docs/analyses/: ANALYSIS-alpha-readiness.md  session-fable5-analysis-2026-07-05.md
docs/design/: BLU_SERVE_DESIGN.md  CLI_UX.md  ENVELOPE_ENCRYPTION_DESIGN.md  S3_COLD_STORAGE_DESIGN.md
docs/plans/: PLAN-blu-serve.md
docs/plans/archived/: PLAN-backup-progress.md  PLAN-blake3-content-hash.md  PLAN-cold-storage-cleanup.md  PLAN-glacier-cold-storage.md  PLAN-machine-passphrase.md
docs/project/: PRIOS.md  ROADMAP.md  START-HERE.md  TODO.md
fe/: biome.json  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
fe/.bolt/: config.json
fe/src/: App.tsx
fe/src/components/: theme-provider.tsx
fe/src/components/file-browser/: FileHash.tsx  FileList.tsx  FilePaths.tsx  FileStatus.tsx  FileTags.tsx
fe/src/components/key-management/: KeyImport.tsx  KeyManager.tsx  KeyStatus.tsx  KeyUnlock.tsx
fe/src/components/layout/: Header.tsx
fe/src/components/navigation/: Sidebar.tsx
fe/src/components/ui/: accordion.tsx  alert.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  slider.tsx  tabs.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
fe/src/types/: index.ts
scripts/: check-version.sh  e2e-passphrase-smoke.sh  install-local.sh
src/: age.rs  blob.rs  block.rs  chunkfile.rs  clap.rs  clapargs.rs  cli.rs  cmds.rs  compression.rs  config.rs  dek_provider.rs  dir.rs  error.rs  format.rs  hash.rs  ignore.rs  index_merge.rs  io.rs  keys.rs  lib.rs  magic.rs  main.rs  metadata.rs  search.rs  search_trie.rs  storage.rs  tag.rs  tagger.rs  thaw.rs  user_paths.rs  v2format.rs  v3format.rs
src/agent/: biometric.rs  blackbox.rs  client.rs  config.rs  daemon.rs  dek_provider_test.rs  memlock.rs  mod.rs  paths.rs  protocol.rs  state.rs
src/block/: blockref.rs  chunkerator.rs  chunkmeta.rs  fileref.rs  index.rs
src/cli/: add.rs  agent_cmd.rs  backend_cmd.rs  backup.rs  clapargs.rs  debug_index.rs  defrag_blobs.rs  delete_files.rs  doctor.rs  encrypt_files.rs  helpers.rs  identity_cmd.rs  init.rs  list_files.rs  open.rs  output.rs  passphrase.rs  progress.rs  pull.rs  read_index.rs  restore.rs  restore_files.rs  rm.rs  search.rs  search_files.rs  smoke.rs  status.rs  sync.rs  tagger.rs  thaw_cmd.rs  version.rs  write_index.rs
src/cmds/: add.rs  init.rs  restore.rs
src/config/: backend.rs
src/keys/: dek.rs  hpke.rs  hybrid_kem.rs  kek.rs  mnemonic.rs  mod.rs  pq.rs  pq_integration_test.rs
src/metadata/: encrypted.rs  entry.rs  index.rs
src/serve/: index_sync.rs  mod.rs  redb_store.rs  s3xml.rs  server.rs
src/storage/: error.rs  intelligent_tiering.rs  local.rs  s3.rs
test/blocks/t2/.blu/: config.json
test/blocks/t4/.blu/: config.json
test/blocks/t5/: file1.txt  file_f.txt
test/blocks/t5/before/: file4.txt
test/blocks/t7/.blu/: config.json
test/blu_secrets/: blu.key  blu.pub
test/old/t1/.blu/: config.json
test/old/t2/.blu/: config.json
test/t1/.blu/: config.json
test/t2/.blu/: config.json
test/t3/.blu/: config.json
