[package]
name = "blu"
version = "0.5.0"
edition = "2021"
authors = ["Nathan Marley <nathan.marley@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.11"
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
hex = "0.4"
itertools = "0.14"
log = "0.4"
multihash = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
simplelog = "0.12"
suffix = "1.3"
tempfile = "3"
thiserror = "2.0"
walkdir = "2"
# todo: s3 feature
# note: consider non-rustls not supported. Not a fan of openssl
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sha2 = { version = "0.10", features = ["std", "asm", "asm-aarch64", "compress"] }
toml = "0.8"
glob = "0.3"
rpassword = "7.4.0"
daemonize = "0.5"
dirs = "6"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
