[package]
name = "blu"
version = "0.7.3"
edition = "2021"
authors = ["Nathan Marley <nathan@glowberrylabs.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.11"
age-core = "0.11"
# TODO: Consider this in lieu of scrypt
# age-plugin-argon2 = "0.2"
base64 = "0.22"
ciborium = "0.2"
chacha20poly1305 = "0.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
hex = "0.4"
indicatif = "0.18"
itertools = "0.14"
log = "0.4"
multihash = "0.19"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
simplelog = "0.12"
suffix = "1.3"
tempfile = "3"
thiserror = "2.0"
ignore = "0.4"
# todo: s3 feature
# note: consider non-rustls not supported. Not a fan of openssl
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sha2 = "0.11"
toml = "0.8"
glob = "0.3"
rand = "0.10"
rpassword = "7.5"
daemonize = "0.5"
dirs = "6"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
bip39 = { version = "2", features = ["zeroize"] }
hkdf = "0.13"
hmac = "0.13"
bech32 = "0.12"
ml-kem = { version = "0.3", features = ["zeroize"] }
kem = { version = "0.3", features = ["getrandom"] }
sha3 = "0.11"
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
lru = "0.18.0"
redb = "4"
axum = "0.8"
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
