[package]
name = "blu"
version = "0.7.6"
edition = "2021"
authors = ["Nathan Marley <nathan@glowberrylabs.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.11"
age-core = "0.11"
aws-config = "1"
aws-sdk-s3 = "1"
axum = "0.8"
base64 = "0.22"
bech32 = "0.12"
bip39 = { version = "2", features = ["zeroize"] }
chacha20poly1305 = "0.11"
chrono = "0.4"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
daemonize = "0.5"
dirs = "6"
flate2 = "1.0"
glob = "0.3"
hex = "0.4"
hkdf = "0.13"
hmac = "0.13"
http-body-util = "0.1"
ignore = "0.4"
indicatif = "0.18"
itertools = "0.15"
kem = { version = "0.3", features = ["getrandom"] }
libc = "0.2"
log = "0.4"
lru = "0.18.0"
ml-kem = { version = "0.3", features = ["zeroize"] }
multihash = "0.19"
rand = "0.10"
redb = "4"
rpassword = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
sha3 = "0.11"
simplelog = "0.12"
suffix = "1.3"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "1"
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# TODO: s3 feature
# note: consider non-rustls not supported. Not a fan of openssl
# TODO: Consider age-plugin-argon2 in lieu of scrypt
